[project]
name = "DjAI"
version = "0.0.0.dev0"

description = "Artificial Intelligence in Django Apps"
readme = "README.md"

requires-python = ">= 3.8"
license = {file = "LICENSE"}

authors = [
  {name = "Vinh Luong", email = "TheVinhLuong@gmail.com"}
]
maintainers = [
  {name = "Vinh Luong", email = "TheVinhLuong@gmail.com"}
]

keywords = [
  "Django",
  "Artificial Intelligence",
  "AI"
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Environment :: MacOS X",
  "Environment :: Win32 (MS Windows)",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Intended Audience :: Developers",
  "Intended Audience :: Education",
  "Intended Audience :: Financial and Insurance Industry",
  "Intended Audience :: Healthcare Industry",
  "Intended Audience :: Information Technology",
  "Intended Audience :: Legal Industry",
  "Intended Audience :: Manufacturing",
  "Intended Audience :: Science/Research",
  "Intended Audience :: System Administrators",
  "Intended Audience :: Telecommunications Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: MacOS",
  "Operating System :: MacOS :: MacOS X",
  "Operating System :: Microsoft",
  "Operating System :: Microsoft :: Windows",
  "Operating System :: Microsoft :: Windows :: Windows 7",
  "Operating System :: Microsoft :: Windows :: Windows 8",
  "Operating System :: Microsoft :: Windows :: Windows 8.1",
  "Operating System :: Microsoft :: Windows :: Windows 10",
  "Operating System :: OS Independent",
  "Operating System :: Other OS",
  "Operating System :: POSIX",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Topic :: Education",
  "Topic :: Scientific/Engineering",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
  "Topic :: Scientific/Engineering :: Human Machine Interfaces",
  "Topic :: Scientific/Engineering :: Image Processing",
  "Topic :: Scientific/Engineering :: Image Recognition",
  "Topic :: Scientific/Engineering :: Information Analysis",
  "Topic :: Scientific/Engineering :: Mathematics",
  "Topic :: Scientific/Engineering :: Visualization",
  "Topic :: Software Development :: Libraries",
  "Topic :: Software Development :: Libraries :: Python Modules"
]

dependencies = [
  "Django >= 3.2"
]

[project.optional-dependencies]


[project.urls]
homepage = "GitHub.com/Django-AI/DjAI"
documentation = "GitHub.com/Django-AI/DjAI"
repository = "GitHub.com/Django-AI/DjAI"


[project.scripts]

[project.gui-scripts]

[project.entry-points."spam.magical"]
