[metadata]
name = DjAI
version = attr: src.djai.__version__

url = GitHub.com/Django-AI/DjAI
download_url = GitHub.com/Django-AI/DjAI/archive/main.zip

author = Vinh Luong
author_email = TheVinhLuong@gmail.com
maintainer = Vinh Luong
maintainer_email = TheVinhLuong@gmail.com

classifiers =
  Development Status :: 2 - Pre-Alpha
  Environment :: MacOS X
  Environment :: Win32 (MS Windows)
  Framework :: Django
  Framework :: Django :: 3.2
  Intended Audience :: Developers
  Intended Audience :: Education
  Intended Audience :: Financial and Insurance Industry
  Intended Audience :: Healthcare Industry
  Intended Audience :: Information Technology
  Intended Audience :: Legal Industry
  Intended Audience :: Manufacturing
  Intended Audience :: Science/Research
  Intended Audience :: System Administrators
  Intended Audience :: Telecommunications Industry
  License :: OSI Approved :: MIT License
  Operating System :: MacOS
  Operating System :: MacOS :: MacOS X
  Operating System :: Microsoft
  Operating System :: Microsoft :: Windows
  Operating System :: Microsoft :: Windows :: Windows 7
  Operating System :: Microsoft :: Windows :: Windows 8
  Operating System :: Microsoft :: Windows :: Windows 8.1
  Operating System :: Microsoft :: Windows :: Windows 10
  Operating System :: OS Independent
  Operating System :: Other OS
  Operating System :: POSIX
  Operating System :: POSIX :: Linux
  Programming Language :: Python
  Programming Language :: Python :: 3
  Programming Language :: Python :: 3.7
  Programming Language :: Python :: 3.8
  Programming Language :: Python :: 3.9
  Programming Language :: Python :: 3.10
  Topic :: Education
  Topic :: Scientific/Engineering
  Topic :: Scientific/Engineering :: Artificial Intelligence
  Topic :: Scientific/Engineering :: Human Machine Interfaces
  Topic :: Scientific/Engineering :: Image Processing
  Topic :: Scientific/Engineering :: Image Recognition
  Topic :: Scientific/Engineering :: Information Analysis
  Topic :: Scientific/Engineering :: Mathematics
  Topic :: Scientific/Engineering :: Visualization
  Topic :: Software Development :: Libraries
  Topic :: Software Development :: Libraries :: Python Modules

license = MIT

description = Artificial Intelligence in Django Apps
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Django
  Artificial Intelligence
  AI


[options]
zip_safe = False

setup_requires =

install_requires =
  Django >= 3.2

extras_require =

python_requires = '>= 3.7'

entry_points =

scripts =
  src/djai/util/cli/djai
  src/djai/util/cli/aws-eb/djai-aws

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =

[options.packages.find]
where = src
exclude =
include =
  djai.*
