[metadata]
name = DjAIoT
version = attr: djaiot.__version__

url = GitHub.com/Django-AI/DjAIoT
download_url = GitHub.com/Django-AI/DjAIoT/archive/main.zip

author = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
author_email = Edu.AI@STEAMforVietNam.org
maintainer = STEAM for Vietnam Foundation: AI & Robotics Educational Initiative
maintainer_email = Edu.AI@STEAMforVietNam.org

classifiers =

license = MIT

description = Artificial Intelligence (AI) in Internet-of-Things Applications based on Django
long_description = file: README.md
long_description_content_type = text/markdown

keywords =
  Django

  Artificial Intelligence
  A.I.
  AI

  Internet of Things
  Internet-of-Things
  I.o.T.
  IoT


[options]
zip_safe = False

setup_requires =

install_requires =

python_requires = >= 3.8

scripts =

include_package_data = True

packages = find:

package_dir =
  =src

namespace_packages =

py_modules =


[options.packages.find]
where = src
exclude =
include =
  *
